[http]
debug = true
check-revoke = false

[net]
git-fetch-with-cli = true

[package]
name = "leet"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
inquire = "0.7.0"
reqwest = {version = "0.11.24", features = ["json", "cookies"] }
serde = {version = "1.0.197", features = ["derive"] }
serde_json = "1.0.114"
tokio = { version = "1.12.0", features = ["full"] }
